# ELD_2024

./: README.md
bash/: README.md
cpp/: CMakeLists.txt  README.md  constants.cpp  constants.hpp  main.cpp
cpp/ASCII_Table/: ASCII_Table.cpp  CMakeLists.txt
cpp/MAX_Num/: CMakeLists.txt  MAX_Num.cpp
cpp/lambda/: CMakeLists.txt  lambda.cpp
cpp/multTable/: CMakeLists.txt  multTable.cpp
cpp/vowelLetter/: CMakeLists.txt  vowelLetter.cpp
misc/: README.md
python/: README.md
